# gpolkit

./: CMakeLists.txt  README.md  main.vala
Gui/: MainWindow.vala
Helper/: CMakeLists.txt  polkit-1.0.vapi
common/: AccountsInterface.vala  CMakeLists.txt  Environment.vala  Environment.vala.in  GActionDescriptor.vala  GPolkitHelperInterface.vala  UserFunctions.vala
gpolkit/: CMakeLists.txt  Program.vala  main.vala
gpolkit/gui/: ActionWindow.glade  ActionWindow.vala  CMakeLists.txt  MainWindow.glade  MainWindow.ui  MainWindow.vala  TreeStoreProxy.vala
gpolkit/models/: ActionListModel.vala  ActionListTreeStoreProxy.vala  ActionPropertiesModel.vala  BaseModel.vala  ExplicitActionTreeStore.vala  ExplicitEditorWindowModel.vala  ExplicitOverviewModel.vala  ImplicitEditorModel.vala  MainWindowModel.vala  TopToolbarModel.vala  UserListTreeStore.vala  UserSelectModel.vala
gpolkit/utilities/: AccountFunctions.vala  AccountProperties.vala  AccountType.vala
gpolkit/views/: ActionListView.vala  ActionPropertiesView.vala  ExplicitEditorWindowView.vala  ExplicitOverviewView.vala  IBaseView.vala  ImplicitEditorView.vala  MainWindowView.vala  TopToolbarView.vala  UserSelectView.vala
gpolkithelper/: CMakeLists.txt  GPolkitHelper.vala  org.gnome.gpolkit.helper.conf  org.gnome.gpolkit.helper.service.in  org.gnome.gpolkit.helper.xml  org.gnome.gpolkit.policy
vapi/: liboobs-1.vapi
